fixed homepage image height on mobile - landscape to do

--- a/squarespace.css
+++ b/squarespace.css
@@ -257,7 +257,8 @@ img.sqs-gallery-design-strip-slide {
 /*for mobile menu only!! */
  @media screen and (max-width: 767px) {
     /*reduce gap between menu and carousel*/
-    #collection-5a52a4c753450aea1728c820 #page {
+    /*collection-5a52a4c753450aea1728c820 #page*/
+    #page {
         margin-top: 10px;
     }
 
@@ -386,8 +387,10 @@ img.sqs-gallery-design-strip-slide {
         display: none;
 }
 
+    /* image container for height */
     #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.sqs-gallery.sqs-gallery-design-stacked {
-        height: 35vh !important;
+       // height: 35vh !important;
+       /* make this 99% is of container - somehow!*/
 
 }
 
@@ -413,12 +416,22 @@ img.sqs-gallery-design-strip-slide {
 
 }
 
+/*homepage navigation gap */
+@media screen and (min-width: 768px) {
+/* nav padding on homepage to match work pages on desktop menu (not mobile nav) */
+    #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) {
+      padding-top: 0px
+}
+}
+
+
 /* mobile homepage media queries*/
 
 @media screen and (max-width: 1023px) {  
 
+    /* image container for height */
     #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.sqs-gallery.sqs-gallery-design-stacked {
-        height: 34vh !important;
+       // height: 34vh !important;
 
 }
 
@@ -426,7 +439,7 @@ img.sqs-gallery-design-strip-slide {
 
 @media screen and (max-width: 375px) and (min-width: 0px) {
     #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.sqs-gallery.sqs-gallery-design-stacked {
-        height: 35vh !important;
+      //  height: 35vh !important;
     }
 
 
@@ -434,21 +447,21 @@ img.sqs-gallery-design-strip-slide {
 
 @media screen and (max-width: 480px) and (min-width: 376px) {
     #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.sqs-gallery.sqs-gallery-design-stacked {
-        height: 34vh !important;
+      //  height: 34vh !important;
     }
 
 }
 
 @media screen and (max-width: 520px) and (min-width: 481px){
     #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.sqs-gallery.sqs-gallery-design-stacked {
-        height: 33vh !important;
+      //  height: 33vh !important;
     }
 
 }
 
  @media screen and (max-width: 767px) and (min-width: 521px) {
     #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.sqs-gallery.sqs-gallery-design-stacked {
-        height: 33vh !important;
+      //  height: 33vh !important;
     }
 
 }
